# ais-attack-system

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
attacks/: __init__.py
attacks/course_disruption/: __init__.py  course_disruption.py
attacks/flash_cross/: __init__.py  false_target_v6.py  flash_cross_attack.py
attacks/ghost_swarm/: __init__.py  ghost_swarm.py
attacks/identity_clone/: __init__.py  identity_clone.py
attacks/identity_swap/: __init__.py  identity_swap.py
attacks/identity_whitewashing/: __init__.py  identity_whitewashing.py
attacks/port_spoofing/: __init__.py  port_spoofing.py
attacks/position_offset/: __init__.py  position_offset.py
attacks/zone_violation/: __init__.py  zone_violation.py
configs/: _defaults.yaml  default_attack_config.yaml  s3_validation.yaml  s4_validation.yaml  s5_validation.yaml  s6_validation.yaml  s7_test_validation.yaml  s7_validation.yaml  s8_validation.yaml  s9_validation.yaml  scenario_test_validation.yaml
core/: __init__.py  attack_orchestrator.py  constants.py  data_loader_v2.py  data_structures.py  data_utils.py  geojson_types.py
core/auto_labeler/: README.md  __init__.py  ghost_watcher.py  impact_exporter.py  maneuver_simulator.py  responder.py  responder_simple.py  run_impact_simulation_v2.py  situation_evaluator.py  traffic_snapshot_builder.py
core/colregs_validator/: __init__.py  consequence_evaluator_v2.py
core/physics_engine/: __init__.py  data_validator_v2.py  enhanced_navigation.py  physics_engine.py
core/target_selector/: __init__.py  cpa_utils.py  effectiveness.py  target_selector.py
datasets/: __init__.py
datasets/labels/: __init__.py
datasets/scenarios/: __init__.py
datasets/statistics/: __init__.py
docs/: QUICK_START.md  algorithms.md  api_reference.md  contributing.md  deployment.md
scripts/: setup_github_repo.sh
tools/: __init__.py  system_check.py
tools/batch_runner/: __init__.py  run_all_scenarios.py  runner.py  test_5_scenarios.py  test_all_scenarios.py  test_runner.py
tools/export/: __init__.py  convert_to_geojson.py  csv2geojson_cli.py  export_to_bridge_command.py  fix_geojson_nan.py  navigation_benchmark.py  telemetry_analyzer.py
tools/profiler/: __init__.py  analyze_performance.py
tools/validation/: __init__.py  check_data_quality.py
visualization/: __init__.py
visualization/bridge_integration/: __init__.py
visualization/ecdis_renderer/: __init__.py  create_report.py  impact_simulator.py  overview_plotter.py  pre_post_splitter.py  track_loader.py  vessel_selector.py  visualizer.py
visualization/web_interface/: __init__.py
