[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ais-attack-system"
version = "1.0.0"
description = "Advanced AIS Attack Generation and Visualization System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jason Tim Wong", email = "jason@example.com"},
]
maintainers = [
    {name = "Jason Tim Wong", email = "jason@example.com"},
]
keywords = [
    "ais", "maritime", "cybersecurity", "attack-simulation",
    "vessel-tracking", "colregs", "ecdis", "maritime-security"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "geopandas>=0.10.0",
    "shapely>=1.8.0",
    "pyproj>=3.2.0",
    "pyyaml>=5.4.0",
    "plotly>=5.3.0",
    "scikit-learn>=1.0.0",
    "scikit-fuzzy>=0.4.2",
    "pyais>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "black>=21.9.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]
docs = [
    "sphinx>=4.2.0",
    "sphinx-rtd-theme>=1.0.0",
    "mkdocs>=1.2.0",
    "mkdocs-material>=7.3.0",
]
web = [
    "fastapi>=0.70.0",
    "uvicorn>=0.15.0",
    "websockets>=10.0",
    "dash>=2.0.0",
]
performance = [
    "numba>=0.54.0",
    "cython>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/jasontimwong/ais-attack-system"
Documentation = "https://github.com/jasontimwong/ais-attack-system/docs"
Repository = "https://github.com/jasontimwong/ais-attack-system"
"Bug Tracker" = "https://github.com/jasontimwong/ais-attack-system/issues"

[project.scripts]
ais-attack = "core.cli:main"
ais-visualize = "visualization.cli:main"
ais-batch = "tools.batch_runner.cli:main"

[tool.setuptools]
packages = ["core", "attacks", "visualization", "datasets", "tools"]
include-package-data = true

[tool.setuptools.package-data]
datasets = ["scenarios/*.yaml", "labels/*.json"]
visualization = ["templates/*.html", "static/*"]
configs = ["*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--cov=core",
    "--cov=attacks",
    "--cov=visualization",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["core", "attacks", "visualization"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
